# vscode_extension_manager

./: Cargo.toml  README.md
src/: main.rs
src/app/: builder.rs  config.rs  mod.rs  state.rs
src/errors/: extension_error.rs  mod.rs
src/manager/: cache.rs  commands.rs  errors.rs  mod.rs  models.rs  traits.rs  updater.rs
src/network/: api_client.rs  errors.rs  mod.rs  request_builder.rs  response_parser.rs  utils.rs
src/ui/: components.rs  dialogs.rs  events.rs  mod.rs  styles.rs
src/utils/: config_loader.rs  helpers.rs  logger.rs  mod.rs
