[package]
name = "vscode_extension_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"
crossterm = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }


reqwest = { version = "0.11", features = ["json", "gzip"] }
